# super-resolution-pytorch

./: .gitattributes  .gitignore  README.md  pyproject.toml  srcnn-continue.ipynb  srcnn-inference.ipynb  srcnn.ipynb  srgan.ipynb
.github/: dependabot.yml
notebook/: bicubic-interpolation.ipynb  psnr.ipynb  srcnn-cropping.ipynb
src/: checkpoint.py  data.py  device.py  image.py  loss.py  metrics.py
src/model/: __init__.py  srcnn.py  srgan.py
src/model/export/: best-srcnn-continue.pt
src/utils/: __init__.py  srcnn.py  srgan.py
